# parallel-motion-detection

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
analyses/: parallelization_3.ipynb  parallelization_7.ipynb  stages.ipynb
analyses/data/: programs_time_results_owl.mp4_3_nodemand.csv  programs_time_results_owl.mp4_3_ondemand.csv  programs_time_results_owl.mp4_7_nodemand.csv  programs_time_results_owl.mp4_7_ondemand.csv  stages_time_results_owl.mp4.csv
analyses/other/: parallelization_3_nodemand.ipynb  parallelization_3_ondemand.ipynb  parallelization_7_nodemand.ipynb  parallelization_7_ondemand.ipynb
scripts/: stats_parallelization.sh  stats_stages.sh
src/: FrameComputation.cpp  Seq.cpp  SharedQueue.cpp  ThreadPar.cpp  Timer.cpp  ffPar.cpp  ffPar2.cpp
